# scratch_lora

./: Cargo.toml  Dockerfile  README.md  sdkconfig.defaults
.cargo/: config.toml
datasheets/: heltek-pins.txt
docs/: fieldtest.md
docs/schematics/: .gitignore  GT-U7_GPS-Module.kicad_sym  NiceRF-LoRa.kicad_sym  Visor.kicad_sym  heltek_gps_accelerometer.kicad_sch  schematics.kicad_prl  schematics.kicad_pro  schematics.kicad_sch  sym-lib-table  wifi_lora_32(v3).kicad_sym
src/: ble.rs  gps.rs  lib.rs  log.rs  lora.rs  main.rs  nmea.rs  telemetry.rs  thread.rs
src/ble/: config.rs  error.rs  mod.rs  service.rs  state.rs
src/display/: controller.rs  device.rs  mod.rs
src/gnss/: driver.rs  error.rs  mod.rs  positioning.rs  sentence.rs  watch.rs
src/gps/: error.rs  mod.rs  nmea.rs  positioning.rs
src/lora/: mod.rs
